infrastructure/configs/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.100.6.130
  listeners:
    - protocol: HTTP
      port: 80
      name: gateway-wildcard-http
      hostname: "*.${SECRET_DOMAIN}"
    - protocol: HTTP
      port: 80
      name: gateway-domain-http
      hostname: "${SECRET_DOMAIN}"
    - protocol: HTTPS
      port: 443
      name: gateway-wildcard-https
      hostname: "*.${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: letsencrypt-wildcard-cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: gateway-domain-https
      hostname: "${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: letsencrypt-domain-cert
      allowedRoutes:
        namespaces:
          from: All
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-wildcard-https
  namespace: gateway
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
      sectionName: gateway-wildcard-http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            scheme: https
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-domain-https
  namespace: gateway
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
      sectionName: gateway-domain-http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            scheme: https
